kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: jenkins-cicd-demo

spec:
  replicas: 2

  selector:
    matchLabels:
      app: jenkins-cicd-demo

  template:
    metadata:
      labels:
        app: jenkins-cicd-demo

    spec:
      containers:
      - name: node-app
        image: ajaykatkade9/jenkins-cicd-demo:v1

        ports:
        - containerPort: 3000

        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 15
          periodSeconds: 10
          timeoutSeconds: 2
          failureThreshold: 3

        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 2
          failureThreshold: 3
