kubernetes/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: jenkins-cicd-service

spec:
  selector:
    app: jenkins-cicd-demo

  ports:
  - port: 80
    targetPort: 3000

  type: NodePort
